--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,11 @@
 {
   "name": "angular-foundation-colorpicker",
   "version": "1.0.0",
-  "main": "js/foundation-colorpicker-module.js",
+  "main": [
+    "js/foundation-colorpicker-module.js",
+    "css/colorpicker.css",
+    "less/colorpicker.less"
+  ],
   "ignore": [
     "node_modules",
     "components",
